--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -1,3 +1,69 @@
-body { 
-    background-color: yellow; 
+@use 'sass:color';
+$brand-primary: #3a72bc !default;
+$brand-primary-light: color.scale($brand-primary, $lightness: 80%);
+
+#main-section {
+    @media screen and (max-width: 767px) {
+        margin-top: 38px;
+    }
+}
+
+.screen-reader-text {
+    display: inline-block;
+}
+
+.lab-form-intro {
+    display: flex;
+    box-sizing: border-box;
+    flex-flow: column wrap;
+    justify-content: center;
+    min-height: calc(100vh - 4.875rem);
+    line-height: 1.5;
+    padding: 1.5rem;
+    @media screen and (min-width: 768px) {
+        width: 75%;
+        max-width: 960px;
+        margin: 0 auto;
+    }
+}
+
+.lab-form-question {
+    font-size: 1.8rem;
+    border-bottom: 2px solid #fff;
+}
+
+.lab-form-boolean {
+    display: flex;
+    flex-flow: row-reverse nowrap;
+    justify-content: space-between;
+}
+
+.btn-boolean {
+    min-width: 80px;
+    color: $brand-primary;
+    border: 1px solid $brand-primary;
+    &:hover, &:active {
+        color: #fff;
+        background-color: $brand-primary;
+        border: 1px solid $brand-primary;
+    }    
+}
+
+.lab-form-filter {
+    list-style: none;
+    margin: 0;
+    li {
+        margin-bottom: 1.5rem;
+        a {
+            color: $brand-primary;
+            font-weight: normal;
+            transition: all .3s;
+            padding: 2px 10px;
+            &:hover, &:active {
+                background-color: $brand-primary-light;
+                text-decoration: none;
+                margin-left: 20px;
+            }
+        }
+    }
 }
