--- a/assets/aldirblanc/app.css
+++ b/assets/aldirblanc/app.css
@@ -1,4 +1,75 @@
-body {
-  background-color: yellow;
+@media screen and (max-width: 767px) {
+  #main-section {
+    margin-top: 38px;
+  }
+}
+
+.screen-reader-text {
+  display: inline-block;
+}
+
+.lab-form-intro {
+  display: flex;
+  box-sizing: border-box;
+  flex-flow: column wrap;
+  justify-content: center;
+  min-height: calc(100vh - 4.875rem);
+  line-height: 1.5;
+  padding: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .lab-form-intro {
+    width: 75%;
+    max-width: 960px;
+    margin: 0 auto;
+  }
+}
+
+.lab-form-question {
+  font-size: 1.8rem;
+  border-bottom: 2px solid #fff;
+}
+
+.lab-form-boolean {
+  display: flex;
+  flex-flow: row-reverse nowrap;
+  justify-content: space-between;
+}
+
+.btn-boolean {
+  min-width: 80px;
+  color: #3a72bc;
+  border: 1px solid #3a72bc;
+}
+
+.btn-boolean:hover,
+.btn-boolean:active {
+  color: #fff;
+  background-color: #3a72bc;
+  border: 1px solid #3a72bc;
+}
+
+.lab-form-filter {
+  list-style: none;
+  margin: 0;
+}
+
+.lab-form-filter li {
+  margin-bottom: 1.5rem;
+}
+
+.lab-form-filter li a {
+  color: #3a72bc;
+  font-weight: normal;
+  transition: all 0.3s;
+  padding: 2px 10px;
+}
+
+.lab-form-filter li a:hover,
+.lab-form-filter li a:active {
+  background-color: #d7e3f3;
+  text-decoration: none;
+  margin-left: 20px;
 }
 
