--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -1,6 +1,8 @@
 @use 'sass:color';
 $brand-primary: #3a72bc !default;
-$brand-primary-light: color.scale($brand-primary, $lightness: 80%);
+$brand-primary-light: color.scale($brand-primary, $lightness: 80%) !default;
+$brand-success: #66cc66 !default;
+$brand-success-light: color.scale($brand-success, $lightness: 80%) !default;
 
 #main-section {
     @media screen and (max-width: 767px) {
@@ -12,11 +14,13 @@ $brand-primary-light: color.scale($brand-primary, $lightness: 80%);
     display: inline-block;
 }
 
+.box {
+    text-align: center;
+}
 .lab-form-intro {
     display: flex;
     box-sizing: border-box;
     flex-flow: column wrap;
-    justify-content: center;
     min-height: calc(100vh - 4.875rem);
     line-height: 1.5;
     padding: 1.5rem;
@@ -29,19 +33,34 @@ $brand-primary-light: color.scale($brand-primary, $lightness: 80%);
 
 .lab-form-question {
     font-size: 1.8rem;
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #f8f8f8;
 }
 
-.lab-form-boolean {
-    display: flex;
-    flex-flow: row-reverse nowrap;
-    justify-content: space-between;
+.lab-form-answer {
+    position: relative;
+    background: #f8f8f8;
+    padding: .75rem .75rem 2.5rem;
+    border-radius: 2px;
+    @media screen and (min-width: 768px) {
+        padding: 1.5rem;
+    }
+}
+
+.back {
+    position: absolute;
+    left: .75rem;
+    bottom: .75rem;
+    @media screen and (min-width: 768px) {
+        left: 1.5rem;
+        bottom: 1.5rem;
+    }
 }
 
 .btn-boolean {
     min-width: 80px;
     color: $brand-primary;
-    border: 1px solid $brand-primary;
+    background-color: #e2e2e2;
+    border: 1px solid #e2e2e2;
     &:hover, &:active {
         color: #fff;
         background-color: $brand-primary;
@@ -53,17 +72,72 @@ $brand-primary-light: color.scale($brand-primary, $lightness: 80%);
     list-style: none;
     margin: 0;
     li {
-        margin-bottom: 1.5rem;
+        padding: .75rem;
+        margin: 0 0 2px;
+        background-color: #f8f8f8;
+        border-radius: 2px;
+        transition: all .3s;
         a {
             color: $brand-primary;
             font-weight: normal;
-            transition: all .3s;
-            padding: 2px 10px;
-            &:hover, &:active {
-                background-color: $brand-primary-light;
-                text-decoration: none;
-                margin-left: 20px;
+            display: flex;
+            height: 100%;
+            @media screen and (min-width: 768px) {
+                flex-flow: column;
+                justify-content: space-between;
+                &:hover {
+                    text-decoration: none;
+                }
+            }
+            &:after {
+                display: block;
+                content: "N";
+                width: 36px;
+                height: 36px;
+                flex: 36px 0 0;
+                margin: 0 auto;
+                font-family: "ElegantIcons";
+                line-height: 36px;
+                text-align: center;
+                border-radius: 18px;
+                color: #fff;
+                background-color: #e2e2e2;
+            }
+            &:hover:after, &:active:after {
+                color: #fff;
+                background-color: $brand-primary;
+            }
+
+        }
+        h3 {
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+            font-size: 1.2rem;
+            text-align: left;
+            flex: auto;
+            @media screen and (min-width: 768px) {
+                text-align: center;
             }
         }
+        .lab-form-detail {
+            display: none;
+            font-size: .85rem;
+            @media screen and (min-width: 768px) {
+                display: block;
+            }
+        }
+        &:hover {
+            background-color: #fff;
+        }
     }
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around;
+        li {
+            flex: 1 1 0;
+            margin: 0 2px;
+            padding: 1.5rem;
+        }
+    }
+
 }
