--- a/assets/aldirblanc/app.css
+++ b/assets/aldirblanc/app.css
@@ -8,11 +8,14 @@
   display: inline-block;
 }
 
+.box {
+  text-align: center;
+}
+
 .lab-form-intro {
   display: flex;
   box-sizing: border-box;
   flex-flow: column wrap;
-  justify-content: center;
   min-height: calc(100vh - 4.875rem);
   line-height: 1.5;
   padding: 1.5rem;
@@ -28,19 +31,40 @@
 
 .lab-form-question {
   font-size: 1.8rem;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid #f8f8f8;
 }
 
-.lab-form-boolean {
-  display: flex;
-  flex-flow: row-reverse nowrap;
-  justify-content: space-between;
+.lab-form-answer {
+  position: relative;
+  background: #f8f8f8;
+  padding: 0.75rem 0.75rem 2.5rem;
+  border-radius: 2px;
+}
+
+@media screen and (min-width: 768px) {
+  .lab-form-answer {
+    padding: 1.5rem;
+  }
+}
+
+.back {
+  position: absolute;
+  left: 0.75rem;
+  bottom: 0.75rem;
+}
+
+@media screen and (min-width: 768px) {
+  .back {
+    left: 1.5rem;
+    bottom: 1.5rem;
+  }
 }
 
 .btn-boolean {
   min-width: 80px;
   color: #3a72bc;
-  border: 1px solid #3a72bc;
+  background-color: #e2e2e2;
+  border: 1px solid #e2e2e2;
 }
 
 .btn-boolean:hover,
@@ -56,20 +80,91 @@
 }
 
 .lab-form-filter li {
-  margin-bottom: 1.5rem;
+  padding: 0.75rem;
+  margin: 0 0 2px;
+  background-color: #f8f8f8;
+  border-radius: 2px;
+  transition: all 0.3s;
 }
 
 .lab-form-filter li a {
   color: #3a72bc;
   font-weight: normal;
-  transition: all 0.3s;
-  padding: 2px 10px;
+  display: flex;
+  height: 100%;
 }
 
-.lab-form-filter li a:hover,
-.lab-form-filter li a:active {
-  background-color: #d7e3f3;
-  text-decoration: none;
-  margin-left: 20px;
+@media screen and (min-width: 768px) {
+  .lab-form-filter li a {
+    flex-flow: column;
+    justify-content: space-between;
+  }
+
+  .lab-form-filter li a:hover {
+    text-decoration: none;
+  }
+}
+
+.lab-form-filter li a:after {
+  display: block;
+  content: "N";
+  width: 36px;
+  height: 36px;
+  flex: 36px 0 0;
+  margin: 0 auto;
+  font-family: "ElegantIcons";
+  line-height: 36px;
+  text-align: center;
+  border-radius: 18px;
+  color: #fff;
+  background-color: #e2e2e2;
+}
+
+.lab-form-filter li a:hover:after,
+.lab-form-filter li a:active:after {
+  color: #fff;
+  background-color: #3a72bc;
+}
+
+.lab-form-filter li h3 {
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 1.2rem;
+  text-align: left;
+  flex: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .lab-form-filter li h3 {
+    text-align: center;
+  }
+}
+
+.lab-form-filter li .lab-form-detail {
+  display: none;
+  font-size: 0.85rem;
+}
+
+@media screen and (min-width: 768px) {
+  .lab-form-filter li .lab-form-detail {
+    display: block;
+  }
+}
+
+.lab-form-filter li:hover {
+  background-color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .lab-form-filter {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+  }
+
+  .lab-form-filter li {
+    flex: 1 1 0;
+    margin: 0 2px;
+    padding: 1.5rem;
+  }
 }
 
