--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -3,10 +3,12 @@
 // --------------------------------------------------
 
 
+
 //== Colors
 //
 //use sass default color module
 @use 'sass:color';
+
 
 //## Copy default theme variables
 //## Gray and brand colors for use across application.
@@ -41,11 +43,25 @@ $brand-default: $gray-light !default;
 
 $green-dark: #003c46;
 
+$line-height-base:        1.5rem !default; // 24px
+$line-height-half:        $line-height-base/2 !default; // 12px
 
 //== Icons
 $unicode-approved: "\e0dd" !default;
 $unicode-disapproved: "\e0f1" !default;
 $unicode-waiting: "\e02d" !default;
+
+//== Components
+//
+//## Define common padding and border radius sizes and more. Values based on 16px text and 1.5 line-height (24px).
+
+$padding-base:     $line-height-base/2 !default; // 12px
+
+$padding-large:    $line-height-base !default; // 24px
+
+$padding-small:    $line-height-base/3 !default; // 8px
+
+$border-radius-base: 2px !default;
 
 //== Placeholders
 %tick-round-icon {
@@ -356,6 +372,25 @@ $unicode-waiting: "\e02d" !default;
 .lab-form-nav {
     text-align: center;
 }
+
+.lab-application-number {
+    text-align: center;
+    background-color: $gray-light;
+    color: $brand-primary;
+    font-weight: bold;
+    border-radius: 2px;
+    float: left;
+    margin: 1.5rem auto;
+    padding: $padding-base;
+    &:after{
+        content: '.';
+        display: block;
+        height: 0;
+        clear: both;
+        visibility: hidden;
+    }
+}
+
 #editable-entity {
     display: none;
 }
