Implementação do JS das perguntas de redirecionamentos da página de cadastro #3.

--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -262,6 +262,7 @@ $unicode-waiting: "\e02d" !default;
         background-color: $brand-warning;
     }
     h2 {
+        text-align: center;
         background-color: $brand-warning;
     }
 }
@@ -285,4 +286,4 @@ $unicode-waiting: "\e02d" !default;
 
 @import "termos";
 @import "agente";
-
+@import "cadastro";
