--- a/assets-src/sass/_general.scss
+++ b/assets-src/sass/_general.scss
@@ -2,6 +2,16 @@
 // General
 // --------------------------------------------------
 
+.controller-aldirblanc {
+    h1, h2, h3, h4, h5, h6 {
+        text-align: center;
+    }
+    h2,h3,h4,h5, h6 {
+        font-family: $font-stack-base;
+    }
+}
+
+
 #main-section {
     @media screen and (max-width: 767px) {
         margin-top: 38px;
@@ -40,9 +50,6 @@
     }
 }
 
-h1, h2, h3, h4, h5, h6 {
-    text-align: center;
-}
 
 .btn-lab {
     min-width: 80px;
@@ -61,7 +68,21 @@ h1, h2, h3, h4, h5, h6 {
 
 //== Utilities
 //
-//use sass default color module
 .screen-reader-text {
     display: inline-block;
+}
+
+//== Placeholders
+//
+%tick-icon {
+    display: block;
+    content: "N";
+    width: 36px;
+    height: 36px;
+    font-family: "ElegantIcons";
+    line-height: 36px;
+    text-align: center;
+    border-radius: 18px;
+    color: #fff;
+    background-color: $gray-light;
 }
