--- a/assets-src/sass/_inicio.scss
+++ b/assets-src/sass/_inicio.scss
@@ -96,7 +96,7 @@
         text-align: center;
         border-radius: 18px;
         color: #fff;
-        background-color: #e2e2e2;
+        background-color: $gray-light;
         @media screen and (min-width: 768px) {
             order: 3;
             margin: 0 auto;
@@ -180,7 +180,7 @@
 
 .lab-option-detail {
     display: none;
-    font-size: .85rem;
+    font-size: $font-size-small;
     text-align: left;
     padding-left: 46px;
     @media screen and (min-width: 768px) {
